<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="32dp"
    android:paddingHorizontal="16dp"
    android:background="@color/background_app"
    tools:context=".MainActivity">

    <!-- card 1 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/view_male"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view_female"
        app:cardBackgroundColor="@color/background_component"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_male"
                app:tint="@color/white"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/title_text"
                android:textAllCaps="true"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- card 2 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/view_female"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_male"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_female"
                app:tint="@color/white"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/title_text"
                android:textAllCaps="true"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Slider -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_female"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textColor="@color/title_text"
                android:textAllCaps="true"/>

            <TextView
                android:id="@+id/tv_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="168 CM"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"
                android:textAllCaps="true"/>



            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rs_height"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="220"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

<!--    Inicio cards de peso y altura -->
    <!--<androidx.cardview.widget.CardView
        android:layout_width=""
        android:layout_height=""
        >

        <LinearLayout
            android:layout_width=""
            android:layout_height=""
            >

            <TextView
                android:layout_width=""
                android:layout_height=""
                />

            <TextView
                android:layout_width=""
                android:layout_height=""
                />

            <LinearLayout
                android:layout_width=""
                android:layout_height=""
                >

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width=""
                    android:layout_height=""
                    />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width=""
                    android:layout_height=""
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>-->


</androidx.constraintlayout.widget.ConstraintLayout>